--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           </div>
 
           <div class="about__buttons">
-            <a download="" href="./statics/assets/Sachin mandal's.pdf" class="button button--flex">
+            <a download="" href="./statics/assets/sachin mandal's.pdf" class="button button--flex">
               Download CV <i class="uil uil-download-alt button__icon"></i>
             </a>
           </div>
