--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           </div>
 
           <div class="about__buttons">
-            <a download="" href="./statics/assets/Sachin_Mandal Resume.pdf" class="button button--flex">
+            <a download="" href="./statics/assets/Sachin_mandal Resume.pdf" class="button button--flex">
               Download CV <i class="uil uil-download-alt button__icon"></i>
             </a>
           </div>
@@ -287,7 +287,7 @@
                 </div>
               </div>
 
-              <div class="skills__data">
+              <!-- <div class="skills__data">
                 <div class="skills__titles">
                   <h3 class="skills__name">PHP</h3>
                   <span class="skills__number">60%</span>
@@ -295,7 +295,7 @@
                 
                 <div class="skills__bar">
                   <span class="skills__percentage skills_p"></span>
-                </div>
+                </div> -->
               </div>
 
               <div class="skills__data">
