--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 </div>
               </div>
 
-              <!-- <div class="skills__data">
+               <div class="skills__data">
                 <div class="skills__titles">
                   <h3 class="skills__name">PHP</h3>
                   <span class="skills__number">60%</span>
@@ -296,7 +296,7 @@
                 <div class="skills__bar">
                   <span class="skills__percentage skills_p"></span>
                 </div>
-              </div> -->
+              </div>
 
               <div class="skills__data">
                 <div class="skills__titles">
@@ -309,16 +309,16 @@
                 </div>
               </div>
 
-              <!-- <div class="skills__data">
+              <div class="skills__data">
                 <div class="skills__titles">
                   <h3 class="skills__name">C++</h3>
-                  <span class="skills__number">100%</span>
+                  <span class="skills__number">70%</span>
                 </div>
                 
                 <div class="skills__bar">
                   <span class="skills__percentage skills_cpp"></span>
                 </div>
-              </div> -->
+              </div>
 
               <!-- <div class="skills__data">
                 <div class="skills__titles">
