--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 </div>
               </div>
 
-              <div class="skills__data">
+              <!-- <div class="skills__data">
                 <div class="skills__titles">
                   <h3 class="skills__name">C++</h3>
                   <span class="skills__number">70%</span>
@@ -318,7 +318,7 @@
                 <div class="skills__bar">
                   <span class="skills__percentage skills_cpp"></span>
                 </div>
-              </div>
+              </div> -->
 
               <!-- <div class="skills__data">
                 <div class="skills__titles">
