--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         </div>
       </div>
     </section>
-
+  
 
     <!--==================== SKILLS ====================-->
     <section class="skills" id="skills">
@@ -404,9 +404,21 @@
                       <span class="skills__percentage skills_github"></span>
                     </div>
                   </div>
+
                   <div class="skills__data">
                     <div class="skills__titles">
-                      <h3 class="skills__name">KALI LINUX</h3>
+                      <h3 class="skills__name">Postman API Tool</h3>
+                      <span class="skills__number">70%</span>
+                    </div>
+                    
+                    <div class="skills__bar">
+                      <span class="skills__percentage skills_postman"></span>
+                    </div>
+                  </div>
+
+                  <div class="skills__data">
+                    <div class="skills__titles">
+                      <h3 class="skills__name">LINUX</h3>
                       <span class="skills__number">70%</span>
                     </div>
                     
