--- a/index.html
+++ b/index.html
@@ -125,9 +125,8 @@
               Full Stack developer
             </h3>
             <p class="home__description">
-              Proficient in building full stack websites 
-              , enjoys practice coding and
-              learning about new data structures and algorithms.
+              I am a skilled full-stack developer passionate about coding and web development. 
+              Always eager to explore new technologies and tools.
             </p>
             <a href="#contact" class="button button--flex">
               Contact me <i class="uil uil-message button__icon"></i>
@@ -170,7 +169,7 @@
           </div>
 
           <div class="about__buttons">
-            <a download="" href="./statics/assets/Sachin_mandal Resume.pdf" class="button button--flex">
+            <a download="" href="./statics/assets/sachin_mandal Resume.pdf" class="button button--flex">
               Download CV <i class="uil uil-download-alt button__icon"></i>
             </a>
           </div>
