--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           </div>
 
           <div class="about__buttons">
-            <a download="" href="./statics/assets/sachin_mandal Resume.pdf" class="button button--flex">
+            <a download="" href="./statics/assets/Sachin Mandal Resume.pdf" class="button button--flex">
               Download CV <i class="uil uil-download-alt button__icon"></i>
             </a>
           </div>
