--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
             </a>
 
             <div>
-              <h3 class="contact__title">Linkdin</h3>
+              <h3 class="contact__title">Linkedin</h3>
               <span class="contact__subtitle">Sachin Mandal</span>
             </div>
           </div>
